--- a/adivinar.html
+++ b/adivinar.html
@@ -9,5 +9,5 @@
     <h1>Juego de Adivinanza</h1>
     <button onclick="adivinar()" id="aceptar">Adivinar Número</button>
 </body>
-<script src="ejercicios_varios.js"></script>
+<script src="adivinar.js"></script>
 </html>
