--- a/gestor.html
+++ b/gestor.html
@@ -9,5 +9,5 @@
 <body>
     <h1>Bienvenido al Gestor de Tareas</h1>
 </body>
-<script src="ejercicios_varios.js"></script>
+<script src="gestor.js"></script>
 </html>
