--- a/ppt.html
+++ b/ppt.html
@@ -8,6 +8,6 @@
 </head>
 <body>
         <h1>Juega Contra la Máquina</h1>
-    <script src="ejercicios_varios.js"></script>
+    <script src="ppt.js"></script>
 </body>
 </html>
