--- a/adivinar.html
+++ b/adivinar.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Juego de Adivinanza</h1>
-    <button onclick="adivinar()" id="aceptar">Adivinar Número</button>
+    <button onclick="adivinar()" id="aceptar">Adivinar Numero</button>
 </body>
 <script src="adivinar.js"></script>
 </html>
