--- a/pagina/login.html
+++ b/pagina/login.html
@@ -19,6 +19,7 @@
             <button onclick="validar()" class="justify-self-center rounded-full bg-cyan-500 text-white px-4 py-2 hover:bg-blue-600">
                 Aceptar
             </button>
+            <a href="Registrar.html">Registrate aqui</a>
         </li>
     </div>
 </body>
