--- a/pagina/home.html
+++ b/pagina/home.html
@@ -12,14 +12,13 @@
     <!-- Header -->
     <header class="fixed top-0 left-0 h-20 right-0 bg-gray-800 p-2 flex justify-end items-center z-50">
         <button id="modo" class="text-white px-4 py-2 rounded-md"></button>
-        <button id="registrar" class="text-white px-4 py-2 rounded-md">Registrar</button>
-        <button id="perfil" class="text-white px-4 py-2 rounded-md">Perfil</button>
+        <button id="perfil" class="text-white px-4 py-2 rounded-md"><a href="perfil.html">Perfil</a></button>
         <button id="salir" class="text-white px-4 py-2 rounded-md">Salir</button>
         
     </header>
 
     <!-- Nav debajo del header en pantallas grandes -->
-    <nav id="nav" class="lg:fixed top-39 left-0 h-full w-48 bg-gray-800 text-white flex flex-col items-center py-8 space-y-4 z-40 hidden lg:block">
+    <nav id="nav" class="lg:fixed top-39 left-0 h-screen w-48 bg-gray-800 text-white flex flex-col  items-center py-8 space-y-4 z-40 hidden lg:flex">
         <button class="w-32 bg-blue-500 rounded-full hover:bg-blue-600 text-center py-2">
             <a href="#yo" class="block">Creador</a>
         </button>
@@ -35,7 +34,7 @@
         <section id="yo" class="bg-sky-100 p-8 rounded-lg mt-8 mx-auto lg:mr-16 lg:w-3/4">
             <h2 class="text-center text-2xl font-bold text-gray-800">Sobre el Creador</h2>
             <p class="mt-4 text-center text-gray-600">
-                ¡Hola! Me llamo <b>Lindura</b>. Soy un apasionado de los MMORPG como <i>World of Warcraft</i> y <i>Albion</i>, 
+                ¡Hola! Me llamo <b>Osmel Alvarez</b>. Soy un apasionado de los MMORPG como <i>World of Warcraft</i> y <i>Albion</i>, 
                 disfruto explorando curiosidades sobre el universo y la naturaleza. También me encanta jugar <i>League of Legends</i> 
                 y <i>Final Fantasy</i>.
             </p>
@@ -79,7 +78,7 @@
     <!-- Footer -->
     <footer class="bg-gray-800 text-white text-center p-4 mt-20">
         <p>© 2024, Creado por Lindura. Todos los derechos reservados.</p>
-        <p class="mt-2">Encuéntrame en <a href="#" class="text-blue-400 underline">Twitter</a> o <a href="#" class="text-blue-400 underline">GitHub</a>.</p>
+        <p class="mt-2">Encuéntrame en <a href="#" class="text-blue-400 underline">Twitter</a> o <a href="https://github.com/washipash" class="text-blue-400 underline">GitHub</a>.</p>
     </footer>
 
 </body>
