--- a/pagina/login.html
+++ b/pagina/login.html
@@ -10,15 +10,17 @@
 <body class="grid justify-items-center">
     <div id="form" class="mt-20 grid justify-items-center w-96 h-full list-none rounded-3xl border-4 border-gray-800 p-8 bg-sky-600">
         <li class="grid justify-items-stretch">
+            <br>
             <p>Nombre:</p>
             <input type="text" id="nombre" placeholder="  Nombre" class="h-5 w-60 rounded-full">
-            
+            <br>
             <p>Contraseña:</p>
-            <input type="password" id="contraseña" placeholder="  Contraseña" class="h-5 w-60 rounded-full">
-
+            <input type="text" id="contraseña" placeholder="  Contraseña" class="h-5 w-60 rounded-full">
+            <br>
             <button onclick="validar()" class="justify-self-center rounded-full bg-cyan-500 text-white px-4 py-2 hover:bg-blue-600">
                 Aceptar
             </button>
+            <br>
             <a href="Registrar.html">Registrate aqui</a>
         </li>
     </div>
