--- a/pagina/registrar.html
+++ b/pagina/registrar.html
@@ -5,22 +5,89 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Registrate</title>
+    <title>Registrar Usuario</title>
+    <style>
+        body {
+            background-color: #f3f4f6;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        .form-container {
+            background-color: #e0f2fe;
+            border: 2px solid #0284c7;
+            padding: 30px;
+            border-radius: 1rem;
+            width: 100%;
+            max-width: 500px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+        .form-input {
+            border: 1px solid #0284c7;
+        }
+        .form-input:focus {
+            outline: none;
+            border: 2px solid #0369a1;
+        }
+        .btn-submit {
+            background-color: #0284c7;
+            transition: background-color 0.3s ease;
+        }
+        .btn-submit:hover {
+            background-color: #0369a1;
+        }
+        .icon-item {
+            display: inline-block;
+            margin-right: 10px;
+            margin-bottom: 10px;
+            cursor: pointer;
+        }
+        .icon-item img {
+            width: 50px;
+            height: 50px;
+        }
+        .icon-item.selected img {
+            border: 2px solid #0284c7;
+        }
+        .icon-list {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+    </style>
 </head>
 <body>
-    <div class="mt-20 grid justify-items-center w-96 h-full list-none rounded-3xl border-4 border-gray-800 p-8 bg-sky-600">
-        <li class="grid justify-items-stretch">
-        <p>Nombre:</p>
-        <input type="text" placeholder="Nombre" class="h-5 w-60" id="nombre">
-        <p>Correo:</p> 
-        <input type="email" placeholder="Ejemplo@correo.com" class="h-5 w-60" id="mail">
-        <p>Contraseña:</p>
-        <input type="password" placeholder="Contraseña" class="h-5 w-60" id="pass">
-        <p>Repetir contraseña:</p>
-        <input type="password" placeholder="Repetir Contraseña" class="h-5 w-60" id="rpass">
-        <button id="boton" class="justify-self-center rounded-full bg-cyan-500 text-white px-4 py-2  rounded-md hover:bg-blue-600" onclick="validar()">Enviar</button>
-        </li>
+    <div class="form-container">
+        <h2 class="text-2xl font-bold text-gray-800 mb-6 text-center">Crear Usuario</h2>
+        
+        <div>
+            <label for="nombre" class="block text-gray-700 font-medium">Nombre:</label>
+            <input type="text" placeholder="Nombre" class="form-input h-10 w-full rounded-md p-2 mb-4" id="nombre">
+        </div>
+        <div>
+            <label for="mail" class="block text-gray-700 font-medium">Correo:</label>
+            <input type="email" placeholder="Ejemplo@correo.com" class="form-input h-10 w-full rounded-md p-2 mb-4" id="mail">
+        </div>
+        <div>
+            <label for="pass" class="block text-gray-700 font-medium">Contraseña:</label>
+            <input type="password" placeholder="Contraseña" class="form-input h-10 w-full rounded-md p-2 mb-4" id="pass">
+        </div>
+        <div>
+            <label for="rpass" class="block text-gray-700 font-medium">Repetir contraseña:</label>
+            <input type="password" placeholder="Repetir Contraseña" class="form-input h-10 w-full rounded-md p-2 mb-4" id="rpass">
+        </div>
+
+        <div>
+            <p class="font-medium text-gray-700">Selecciona un icono de perfil:</p>
+            <ul id="iconList" class="icon-list mb-4">
+                <!-- Aquí se añadirán los íconos dinámicamente -->
+            </ul>
+        </div>
+        
+        <button id="boton" class="btn-submit w-full rounded-full text-white px-6 py-2 font-medium" onclick="validar()">Registrar</button>
     </div>
 </body>
-<script src="index.html"></script>
+<script src="registro.js"></script>
 </html>
